[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/models/ui/ChooseModeHUD.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 256
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[node name="ChooseModeHUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartMessage" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 933.0
custom_fonts/font = SubResource( 3 )
text = "Choose
Mode"
align = 1

[node name="DoubleButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = 9.0
margin_right = 204.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 4 )
text = "Match"

[node name="SingleButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 800.0
margin_right = 200.0
margin_bottom = 1000.0
custom_fonts/font = SubResource( 4 )
text = "Alone"

[connection signal="button_down" from="DoubleButton" to="." method="_on_DoubleButton_button_down"]
[connection signal="button_down" from="SingleButton" to="." method="_on_SingleButton_button_down"]
